--- a/Saturn72.Web.Framework/packages.config
+++ b/Saturn72.Web.Framework/packages.config
@@ -7,6 +7,7 @@
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
   <package id="AutoMapper" version="4.1.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="FluentValidation" version="5.6.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
