Add Owin support (IOwinConfigurar) now the Owin's main startup can configure Owin outside the main project

--- a/Areas/Saturn72.Web.Areas.Admin/Saturn72.Web.Areas.Admin.csproj
+++ b/Areas/Saturn72.Web.Areas.Admin/Saturn72.Web.Areas.Admin.csproj
@@ -78,6 +78,7 @@
     <Content Include="web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Views\Dashboard\Index.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
