--- a/Saturn72.Web.Framework/packages.config
+++ b/Saturn72.Web.Framework/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
   <package id="Saturn72.Extensions" version="1.0.0" targetFramework="net452" />
   <package id="Saturn72.Extensions.AspNet" version="1.0.0" targetFramework="net452" />
