--- a/Saturn72.Web.Framework/Saturn72.Web.Framework.csproj
+++ b/Saturn72.Web.Framework/Saturn72.Web.Framework.csproj
@@ -103,6 +103,10 @@
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
       <Private>True</Private>
@@ -173,6 +177,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Owin\IOwinConfigurar.cs" />
     <Compile Include="Plugins\AreaManager.cs" />
     <Compile Include="Plugins\AreaSettings.cs" />
     <Compile Include="Extensions\AutoMapperExtensions.cs" />
