--- a/Saturn72.Web.UI/Saturn72.Web.UI.csproj
+++ b/Saturn72.Web.UI/Saturn72.Web.UI.csproj
@@ -200,15 +200,12 @@
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ScheduleTaskController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Install\InstallationModel.cs" />
-    <Compile Include="Models\Tasks\ScheduleTaskModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Validators\Tasks\ScheduleTaskValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Installation\LanguageResources.xml" />
@@ -2614,7 +2611,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Validators\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Saturn72.Core\src\Saturn72.Core.Services\Saturn72.Core.Services.csproj">
       <Project>{6f2d2418-65f5-4c10-b871-47b435026d54}</Project>
@@ -2695,7 +2694,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>54490</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:54490/</IISUrl>
+          <IISUrl>http://localhost:26880/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
