--- a/Areas/Saturn72.Web.Areas.Ui/web.config
+++ b/Areas/Saturn72.Web.Areas.Ui/web.config
@@ -21,7 +21,7 @@
   </appSettings>
   
   <system.web>
-    <compilation targetFramework="4.6" />
+    <compilation targetFramework="4.5.2" />
     <pages
       validateRequest="false"
       pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
@@ -38,6 +38,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="Saturn72.Web.Framework"/>
       </namespaces>
     </pages>
   </system.web>
