--- a/Saturn72.Web.UI/Saturn72.Web.UI.csproj
+++ b/Saturn72.Web.UI/Saturn72.Web.UI.csproj
@@ -2603,6 +2603,7 @@
     <Content Include="Scripts\kendo\2014.1.318\kendo.view.min.js.map" />
     <Content Include="Scripts\kendo\2014.1.318\kendo.web.min.js.map" />
     <Content Include="Scripts\kendo\2014.1.318\kendo.window.min.js.map" />
+    <Content Include="Views\Shared\_HeaderMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
